Add Property-Envinator link

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         </div>
     </div>
 
-    <!-- Call to Action (CTA) -->
     <div class="mt-8 text-center">
+        <a class="text-lg font-semibold text-blue-600 hover:text-blue-700"
+            href="https://github.com/felipepedrosa/property-envinator" target="_blank">
+            Utilize também a versão para IntelliJ IDEA</a>
         <p class="text-lg font-semibold text-gray-300">Gostou do Envinator? Compartilhe com seus amigos!</p>
         <button onclick="sharePage()"
             class="mt-4 bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-6 rounded-lg transition-all">
