--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envinator</title>
+    <link rel="icon" href="icon.png" type="image/png">
     <script src="index.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
